<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f7f7f7"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_tab_to_do"
        android:padding="1dp"
        android:weightSum="4" >

        <TextView
            android:id="@+id/tab11"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="#a62740"
            android:clickable="true"
            android:gravity="center"
            android:onClick="selectTab"
            android:padding="3dp"
            android:tag="1"
            android:text="@string/tab1"
            android:textColor="#fff"
            android:textSize="20sp" />

        <TextView
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:background="#a62740" />

        <TextView
            android:id="@+id/tab22"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:onClick="selectTab"
            android:padding="3dp"
            android:tag="2"
            android:text="@string/tab2"
            android:textColor="#a62740"
            android:textSize="20sp" />

        <TextView
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:background="#a62740" />

        <TextView
            android:id="@+id/tab33"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:onClick="selectTab"
            android:padding="3dp"
            android:tag="3"
            android:text="@string/tab3"
            android:textColor="#a62740"
            android:textSize="20sp" />

        <TextView
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:background="#a62740" />

        <TextView
            android:id="@+id/tab44"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:onClick="selectTab"
            android:padding="3dp"
            android:tag="4"
            android:text="@string/tab4"
            android:textColor="#a62740"
            android:textSize="20sp" />
    </LinearLayout>

    <com.handmark.pulltorefresh.library.PullToRefreshListView
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/tab"
        android:padding="10dp" >
    </com.handmark.pulltorefresh.library.PullToRefreshListView>

</RelativeLayout>