<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_home"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:src="@drawable/logo"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/esquel_pass_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/log"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:padding="30dp"
        android:text="@string/app_name"
        android:textColor="#aaaaaa"
        android:textSize="22sp"
        android:visibility="invisible" />

    <RelativeLayout
        android:id="@+id/input_user_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/esquel_pass_title"
        android:layout_marginBottom="2dp"
        android:background="#99929d"
        android:visibility="invisible" >

        <ImageView
            android:id="@+id/icon_input_user"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignParentLeft="true"
            android:background="#ada8b1"
            android:padding="4dp"
            android:src="@drawable/icon_input_user" />

        <EditText
            android:id="@+id/inputUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/icon_input_user"
            android:background="@null"
            android:hint="@string/login_id_hint"
            android:paddingLeft="20dp"
            android:paddingRight="0dp"
            android:singleLine="true"
            android:textColor="#fff"
            android:textColorHint="#eae9eb" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/input_password_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_user_layout"
        android:background="#99929d"
        android:visibility="invisible" >

        <ImageView
            android:id="@+id/icon_input_user"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignParentLeft="true"
            android:background="#ada8b1"
            android:padding="4dp"
            android:src="@drawable/icon_input_password" />

        <EditText
            android:id="@+id/inputPassWord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/icon_input_user"
            android:background="@null"
            android:hint="@string/login_password_hint"
            android:paddingLeft="20dp"
            android:paddingRight="0dp"
            android:password="true"
            android:singleLine="true"
            android:textColor="#fff"
            android:textColorHint="#eae9eb" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/login_panel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/input_password_layout"
        android:layout_marginTop="2dp"
        android:visibility="invisible"
        android:weightSum="4" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:gravity="center" >

            <RelativeLayout
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:background="#ada8b1"
                android:gravity="center" >

                <CheckBox
                    android:id="@+id/remember_password"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/login_checkbox_button"
                    android:button="@null"
                    android:checked="false"
                    android:drawableLeft="@null"
                    android:drawableRight="@null" />
            </RelativeLayout>

            <TextView
                android:id="@+id/remember_password_text"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginRight="1dp"
                android:layout_weight="2"
                android:background="#574f5c"
                android:gravity="center"
                android:text="@string/remember_password"
                android:textColor="#ffffff" />
        </LinearLayout>

        <TextView
            android:id="@+id/login"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="2"
            android:background="#574f5c"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="#ffffff" />
    </LinearLayout>

    <TextView
        android:id="@+id/login_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/login_description"
        android:textColor="@color/white"
        android:visibility="invisible" >
    </TextView>

</RelativeLayout>